<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Infertilitas</string>
    <string name="hello_world">Hello world!</string>
    <string name="judul">SISTEM PENUNJANG KEPUTUSAN UNTUK MENGETAHUI INFERTILITAS PADA WANITA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quest">Diagnosa</string>
    <string name="title_activity_result">Hasil Diagnosa</string>
    <string name="hasil">Hasil Diagnosa dengan Presentase Keyakinan : </string>
    <string name="title_activity_gejala">Gejala</string>
    <string name="gejala">GEJALA UMUM INFERTILITAS PADA WANITA</string>
    <string name="G01">1. Haid Terasa Sakit/Kram</string>
    <string name="G02">2. Haid yang Jarang</string>
    <string name="G03">3. Haid yang Banyak</string>
    <string name="G04">4. Haid Tidak Teratur</string>
    <string name="G05">5. Berat Badan Naik</string>
    <string name="G06">6. Nyeri Saat Berhubungan Intim</string>
    <string name="G07">7. Keputihan</string>
    <string name="G08">8. Stress/Emosi</string>
    <string name="G09">9. Kurang Semangat</string>
    <string name="G10">10.Mudah Lelah</string>
    <string name="G11">11.Perubahan Kulit (Jerawat yang Banyak)</string>
    <string name="G12">12.Perubahan Dalam Keinginan Seksual</string>
    <string name="G13">13.Tumbuh Rambut Gelap Pada Bibir, Dada, dan Dagu</string>
    <string name="G14">14.Rambut Rontok</string>
    <string name="G15">15.Keluar Cairan ASI Padahal Tidak Sedang Menyusui</string>
    <string name="title_activity_bantuan">Bantuan</string>
    <string name="bantuan">TATA CARA PENGGUNAAN SISTEM</string>
    <string name="B01">1. Klik menu Gejala untuk mengetahui gejala-gejala yang timbul akibat penyakit infertilisasi</string>
    <string name="B02">2. Klik menu DIagnosa untuk memulai proses diagnosa. Jawablah pertanyaan-pertanyaan yang telah disediakan dengan memilih salah satu pilihan jawaban yang paling mewakili keluhan yang Anda rasakan</string>
    <string name="B03">3. Klik menu Bantuan untuk mengetahui tata cara penggunaan sistem</string>
    <string name="B04">4. Klik menu Profil untuk mengetahui profil penulis</string>
    <string name="title_activity_profil">Profil</string>
    <string name="profil">SISTEM PENUNJANG KEPUTUSAN BERBASIS ANDROID UNTUK MENGETAHUI INFERTILISASI PADA WANITA MENGGUNAKAN METODE CERTAINTY FACTOR</string>
    <string name="P01">Nama 			: Gina Lufitadewi</string>
    <string name="P02">NIM 				: A11.2011.06146</string>
    <string name="P03">Dosen Pembimbing : Aripin, M.Kom</string>
    <string name="kampus">Universitas Dian Nuswantoro Semarang</string>

</resources>
